PI-495 fixed wrapping issue

--- a/stackdio/ui/static/stackdio/css/stackdio.css
+++ b/stackdio/ui/static/stackdio/css/stackdio.css
@@ -33,6 +33,10 @@ img.logo {
     margin: 0 auto;
 }
 
+a {
+    word-wrap: break-word;
+}
+
 .footer {
     padding-top: 20px;
     padding-bottom: 20px;
